# BDC-Bricky-Firmware

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/GearMotor/: CMakeLists.txt  GearMotor.cpp  GearMotor.h
components/GearMotor/Encoder/: Encoder.cpp  Encoder.h
components/GearMotor/Motor/: Motor.cpp  Motor.h  Motor.hpp
components/MotorCtrl/: CMakeLists.txt  MotorCtrl.h  MotorCtrl.hpp
components/MotorCtrl/Encoder/: Encoder.hpp
components/MotorCtrl/Motor/: Motor.cpp  Motor.h  Motor.hpp
main/: Bricky.cpp  CMakeLists.txt
